[Qt] Fix wrong icons.

--- a/source/src/qt/common/qrc/pcengine.qrc
+++ b/source/src/qt/common/qrc/pcengine.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file alias="default.ico">../../../res/pcengine.ico</file>
+    <file alias="default.ico">../../../res/pckd863g.ico</file>
 </qresource>
 </RCC>
