[VM][MZ1500] Fix FTBFSs. [Draw][Qt][GL] Support One-Board-Computers.

--- a/source/src/qt/common/qrc/shaders.qrc
+++ b/source/src/qt/common/qrc/shaders.qrc
@@ -9,5 +9,6 @@
     <file alias="vertex_shader.glsl">../vertex_shader.glsl</file>
     <file alias="grids_fragment_shader.glsl">../grids_fragment_shader.glsl</file>
     <file alias="grids_vertex_shader.glsl">../grids_vertex_shader.glsl</file>
+    <file alias="grids_vertex_shader_fixed.glsl">../grids_vertex_shader_fixed.glsl</file>
 </qresource>
 </RCC>
