--- a/source/src/qt/common/qrc/shaders.qrc
+++ b/source/src/qt/common/qrc/shaders.qrc
@@ -1,12 +1,12 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file alias="fragment_shader.glsl">../fragment_shader.glsl</file>
-    <file alias="tmp_vertex_shader.glsl">../tmp_vertex_shader.glsl</file>
-    <file alias="normal_fragment_shader.glsl">../normal_fragment_shader.glsl</file>
-    <file alias="chromakey_fragment_shader.glsl">../chromakey_fragment_shader.glsl</file>
-    <file alias="vertex_shader.glsl">../vertex_shader.glsl</file>
-    <file alias="grids_fragment_shader.glsl">../grids_fragment_shader.glsl</file>
-    <file alias="grids_vertex_shader.glsl">../grids_vertex_shader.glsl</file>
-    <file alias="grids_vertex_shader_fixed.glsl">../grids_vertex_shader_fixed.glsl</file>
+    <file alias="fragment_shader.glsl">../../gui/fragment_shader.glsl</file>
+    <file alias="tmp_vertex_shader.glsl">../../gui/tmp_vertex_shader.glsl</file>
+    <file alias="normal_fragment_shader.glsl">../../gui/normal_fragment_shader.glsl</file>
+    <file alias="chromakey_fragment_shader.glsl">../../gui/chromakey_fragment_shader.glsl</file>
+    <file alias="vertex_shader.glsl">../../gui/vertex_shader.glsl</file>
+    <file alias="grids_fragment_shader.glsl">../../gui/grids_fragment_shader.glsl</file>
+    <file alias="grids_vertex_shader.glsl">../../gui/grids_vertex_shader.glsl</file>
+    <file alias="grids_vertex_shader_fixed.glsl">../../gui/grids_vertex_shader_fixed.glsl</file>
 </qresource>
 </RCC>
