--- a/source/src/qt/common/qrc/mz1200.qrc
+++ b/source/src/qt/common/qrc/mz1200.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/mz1200.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/mz1200.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/mz80k.qm</file>
 </qresource>
 </RCC>
