--- a/source/src/qt/common/qrc/mz3500.qrc
+++ b/source/src/qt/common/qrc/mz3500.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/mz3500.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/mz3500.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/mz3500.qm</file>
 </qresource>
 </RCC>
