--- a/source/src/qt/common/qrc/mz800.qrc
+++ b/source/src/qt/common/qrc/mz800.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/mz800.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/mz800.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/mz700.qm</file>
 </qresource>
 </RCC>
