--- a/source/src/qt/common/qrc/mz80a.qrc
+++ b/source/src/qt/common/qrc/mz80a.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/mz80a.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/mz80a.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/mz80k.qm</file>
 </qresource>
 </RCC>
