--- a/source/src/qt/common/qrc/pc9801e.qrc
+++ b/source/src/qt/common/qrc/pc9801e.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/pc9801e.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/pc9801.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/pc9801.qm</file>
 </qresource>
 </RCC>
