--- a/source/src/qt/common/qrc/smb80te.qrc
+++ b/source/src/qt/common/qrc/smb80te.qrc
@@ -3,5 +3,6 @@
     <file alias="default.ico">../../../res/smb80te.ico</file>
     <file alias="background.png">../../../res/smb80te.png</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/smb80te.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/smb80te.qm</file>
 </qresource>
 </RCC>
