--- a/source/src/qt/common/qrc/tk80bs.qrc
+++ b/source/src/qt/common/qrc/tk80bs.qrc
@@ -3,5 +3,6 @@
     <file alias="default.ico">../../../res/tk80bs.ico</file>
     <file alias="background.png">../../../res/tk80bs.png</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/tk80bs.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/tk80bs.qm</file>
 </qresource>
 </RCC>
