[OOPS] Add some translations. [OOPS] Fix crash with mz2800.

--- a/source/src/qt/common/qrc/j3100gt.qrc
+++ b/source/src/qt/common/qrc/j3100gt.qrc
@@ -1,6 +1,5 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file alias="default.ico">../../../res/j3100.ico</file>
+<!DOCTYPE RCC><RCC version="1.0"> <qresource> 
+    <file alias="default.ico">../../../res/j3100.ico</file> 
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/00_still_not_written.txt</file>
-</qresource>
-</RCC>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/j3100.qm</file>
+</qresource> </RCC>
