[UI][Qt] Update Japanese translations.

--- a/source/src/qt/common/qrc/familybasic.qrc
+++ b/source/src/qt/common/qrc/familybasic.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/familybasic.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/familybasic.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/familybasic.qm</file>
 </qresource>
 </RCC>
