[RES] Fix tk85.qrc.

--- a/source/src/qt/common/qrc/tk85.qrc
+++ b/source/src/qt/common/qrc/tk85.qrc
@@ -2,7 +2,7 @@
 <qresource>
     <file alias="default.ico">../../../res/tk85.ico</file>
     <file alias="background.png">../../../res/tk85/board.png</file>
-    <file alias="bios_and_keys.txt">../../../../../doc/VMs/tk85.txt</file>
+    <file alias="bios_and_keys.txt">../../../../../doc/VMs/tk80bs.txt</file>
     <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/tk80bs.qm</file>
     <file alias="button00.png">../../../res/tk85/button00.png</file>
     <file alias="button01.png">../../../res/tk85/button01.png</file>
