[General] Merge upstream 2017-03-08 1/2.

--- a/source/src/qt/common/qrc/commontexts.qrc
+++ b/source/src/qt/common/qrc/commontexts.qrc
@@ -4,6 +4,7 @@
     <file alias="readme.txt">../../../../readme.txt</file>
     <file alias="readme.qt.txt">../../../../readme.qt.txt</file>
     <file alias="readme_by_mr_tanam.txt">../../../../readme_by_mr_tanam.txt</file>
+    <file alias="readme_by_umaiboux.txt">../../../../readme_by_umaiboux.txt</file>
     <file alias="readme_by_artane.txt">../../../../readme_by_artane.txt</file>
     <file alias="readme_fm7.txt">../../../../readme_fm7.txt</file>
     <file alias="readme_fm7.jp.txt">../../../../readme_fm7.jp.txt</file>
