--- a/source/src/qt/common/qrc/smc70.qrc
+++ b/source/src/qt/common/qrc/smc70.qrc
@@ -1,7 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file alias="default.ico">../../../res/smc70.ico</file>
-    <file alias="bios_and_keys.txt">../../../../../doc/VMs/00_still_not_written.txt</file>
+    <file alias="bios_and_keys.txt">../../../../../doc/VMs/smc70.txt</file>
     <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/smc777.qm</file>
 </qresource>
 </RCC>
