[BUILD] Add comments to buildvars*.dat.tmpl .

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -1,4 +1,5 @@
-###
+### Build definitions for GNU/Linux (and maybe other *nix like OSs) native build.
+### Please copy this to buildvars.dat and edit.
 #
 
 BUILD_TOOLCHAIN="GCC"
