--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -1,3 +1,7 @@
+### Build definitions for Win32 cross build.
+### BY GNU/Linux (and maybe other *nix like OSs) host to MinGW32 target.
+### Please copy this to buildvars_mingw_cross_win32.dat and edit.
+#
 #CMAKE=/usr/bin/cmake
 BUILD_TOOLCHAIN="GCC"
 
