--- a/source/build-cmake/buildvars_mingw.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw.dat.tmpl
@@ -1,3 +1,6 @@
+### Build definitions for Win32 (or Win64?) MinGW native build.
+### Please copy this to buildvars_mingw.dat and edit.
+#
 #CMAKE="/c/Program Files (x86)/CMake/bin/cmake"
 CCMAKE_CC=gcc
 CCMAKE_CXX=g++
