[Windows][General] Make OSD to be DLL. [Build][Windows] Adjust optimize parameters.

--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -6,10 +6,17 @@
 BUILD_TOOLCHAIN="GCC"
 
 BUILD_TYPE="Release"
+
 # "No" or "Yes".
 CSP_DEBUG="NO"
+
+# "SSE1" "SSE2" "SSE3" "AVX" or "NO"
+LOCAL_ARCH_TYPE="SSE2"
+
 # "No" or "Yes".
 USE_LTO="Yes"
+# "No" or "Yes"
+USE_WHOLE_PROGRAM_OPTIMIZE="Yes"
 
 # No" or "Yes"
 STRIP_SYMBOLS="Yes"
