[Qt][OSD][LAMP] Improbe LED displaying.

--- a/source/src/qt/common/qrc/shaders.qrc
+++ b/source/src/qt/common/qrc/shaders.qrc
@@ -5,6 +5,8 @@
     <file alias="normal_fragment_shader.glsl">../../gui/normal_fragment_shader.glsl</file>
     <file alias="chromakey_fragment_shader.glsl">../../gui/chromakey_fragment_shader.glsl</file>
     <file alias="chromakey_fragment_shader2.glsl">../../gui/chromakey_fragment_shader2.glsl</file>
+    <file alias="led_fragment_shader.glsl">../../gui/led_fragment_shader.glsl</file>
+    <file alias="led_vertex_shader.glsl">../../gui/led_vertex_shader.glsl</file>
     <file alias="vertex_shader.glsl">../../gui/vertex_shader.glsl</file>
     <file alias="grids_fragment_shader.glsl">../../gui/grids_fragment_shader.glsl</file>
     <file alias="grids_vertex_shader.glsl">../../gui/grids_vertex_shader.glsl</file>
