[Build][Linux] Add "COMPRESS_SYMBOLS" flag to configuration.

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -16,6 +16,8 @@ USE_LTO="Yes"
 # "No" or "Yes"
 STRIP_SYMBOLS="No"
 # "No" or "Yes"
+COMPRESS_SYMBOLS="No"
+# "No" or "Yes"
 USE_RADICAL_OPTIMIZE="Yes"
 # "No" or "Yes"
 USE_COMMON_DEVICE_LIB="Yes"
