[Build][CMake] Add supporting for OpenMP.

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -22,7 +22,10 @@ USE_RADICAL_OPTIMIZE="Yes"
 # "No" or "Yes"
 USE_COMMON_DEVICE_LIB="Yes"
 # "No" or "Yes"
-USE_WHOLE_PROGRAM_OPTIMIZE="Yes"
+USE_WHOLE_PROGRAM_OPTIMIZE="No"
+
+# "No" or "Yes"
+USE_OPENMP="No"
 
 ADDITIONAL_MAKEFLAGS_LINK_EXE=""
 ADDITIONAL_MAKEFLAGS_LINK_DLL=""
