--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -26,6 +26,9 @@ USE_RADICAL_OPTIMIZE="No"
 # "No" or "Yes"
 USE_COMMON_DEVICE_LIB="Yes"
 
+# "No" or "Yes"
+USE_OPENMP="No"
+
 ADDITIONAL_MAKEFLAGS_LINK_EXE=""
 ADDITIONAL_MAKEFLAGS_LINK_DLL=""
 ADDITIONAL_MAKEFLAGS_LINK_LIB=""
