[UI][Qt][I18N] Update translations.

--- a/source/src/qt/common/qrc/i18n_global.qrc
+++ b/source/src/qt/common/qrc/i18n_global.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file alias="csp_qt_gui_ja.qm">../../../res/i18n/ja/csp_qt_gui.qm</file>
+    <file alias="csp_qt_common_ja.qm">../../../res/i18n/ja/csp_qt_common.qm</file>
 </qresource>
 </RCC>
