--- a/source/src/qt/common/qrc/i18n_global.qrc
+++ b/source/src/qt/common/qrc/i18n_global.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="csp_qt_gui_ja.qm">../../../res/i18n/ja/csp_qt_gui.qm</file>
     <file alias="csp_qt_common_ja.qm">../../../res/i18n/ja/csp_qt_common.qm</file>
+    <file alias="csp_qt_debugger_ja.qm">../../../res/i18n/ja/csp_qt_debugger.qm</file>
 </qresource>
 </RCC>
