[Qt][OpenGL][Draw] Add OpenGL ES2 renderer.Still not display.

--- a/source/src/qt/common/qrc/shaders.qrc
+++ b/source/src/qt/common/qrc/shaders.qrc
@@ -1,18 +1,43 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file alias="fragment_shader.glsl">../../gui/fragment_shader.glsl</file>
-    <file alias="tmp_vertex_shader.glsl">../../gui/tmp_vertex_shader.glsl</file>
-    <file alias="normal_fragment_shader.glsl">../../gui/normal_fragment_shader.glsl</file>
-    <file alias="chromakey_fragment_shader.glsl">../../gui/chromakey_fragment_shader.glsl</file>
-    <file alias="chromakey_fragment_shader2.glsl">../../gui/chromakey_fragment_shader2.glsl</file>
-    <file alias="led_fragment_shader.glsl">../../gui/led_fragment_shader.glsl</file>
-    <file alias="led_vertex_shader.glsl">../../gui/led_vertex_shader.glsl</file>
-    <file alias="icon_fragment_shader.glsl">../../gui/icon_fragment_shader.glsl</file>
-    <file alias="vertex_shader.glsl">../../gui/vertex_shader.glsl</file>
-    <file alias="grids_fragment_shader.glsl">../../gui/grids_fragment_shader.glsl</file>
-    <file alias="grids_vertex_shader.glsl">../../gui/grids_vertex_shader.glsl</file>
-    <file alias="grids_vertex_shader_fixed.glsl">../../gui/grids_vertex_shader_fixed.glsl</file>
-    <file alias="ntsc_pass1.glsl">../../gui/ntsc_pass1.glsl</file>
-    <file alias="ntsc_pass2.glsl">../../gui/ntsc_pass2.glsl</file>
+    <file alias="gl2/chromakey_fragment_shader2.glsl">../../gui/gl2/chromakey_fragment_shader2.glsl</file>
+    <file alias="gl2/vertex_shader.glsl">../../gui/gl2/vertex_shader.glsl</file>
+    <file alias="gl2/normal_fragment_shader.glsl">../../gui/gl2/normal_fragment_shader.glsl</file>
+    <file alias="gl2/icon_fragment_shader.glsl">../../gui/gl2/icon_fragment_shader.glsl</file>	
+
+    <file alias="gl3/chromakey_fragment_shader.glsl">../../gui/gl3/chromakey_fragment_shader.glsl</file>
+    <file alias="gl3/chromakey_fragment_shader2.glsl">../../gui/gl3/chromakey_fragment_shader2.glsl</file>
+    <file alias="gl3/fragment_shader.glsl">../../gui/gl3/fragment_shader.glsl</file>
+    <file alias="gl3/icon_fragment_shader.glsl">../../gui/gl3/icon_fragment_shader.glsl</file>	
+    <file alias="gl3/normal_fragment_shader.glsl">../../gui/gl3/normal_fragment_shader.glsl</file>
+	
+    <file alias="gl3/vertex_shader.glsl">../../gui/gl3/vertex_shader.glsl</file>
+    <file alias="gl3/tmp_vertex_shader.glsl">../../gui/gl3/tmp_vertex_shader.glsl</file>
+	
+    <file alias="gl3/led_fragment_shader.glsl">../../gui/gl3/led_fragment_shader.glsl</file>
+    <file alias="gl3/led_vertex_shader.glsl">../../gui/gl3/led_vertex_shader.glsl</file>
+
+    <file alias="gl3/grids_fragment_shader.glsl">../../gui/gl3/grids_fragment_shader.glsl</file>
+    <file alias="gl3/grids_vertex_shader.glsl">../../gui/gl3/grids_vertex_shader.glsl</file>
+    <file alias="gl3/grids_vertex_shader_fixed.glsl">../../gui/gl3/grids_vertex_shader_fixed.glsl</file>
+    <file alias="gl3/ntsc_pass1.glsl">../../gui/gl3/ntsc_pass1.glsl</file>
+    <file alias="gl3/ntsc_pass2.glsl">../../gui/gl3/ntsc_pass2.glsl</file>
+
+    <file alias="gles2/chromakey_fragment_shader.glsl">../../gui/gles2/chromakey_fragment_shader.glsl</file>
+    <file alias="gles2/chromakey_fragment_shader2.glsl">../../gui/gles2/chromakey_fragment_shader2.glsl</file>
+    <file alias="gles2/fragment_shader.glsl">../../gui/gles2/fragment_shader.glsl</file>
+    <file alias="gles2/icon_fragment_shader.glsl">../../gui/gles2/icon_fragment_shader.glsl</file>	
+    <file alias="gles2/normal_fragment_shader.glsl">../../gui/gles2/normal_fragment_shader.glsl</file>
+	
+    <file alias="gles2/vertex_shader.glsl">../../gui/gles2/vertex_shader.glsl</file>
+    <file alias="gles2/tmp_vertex_shader.glsl">../../gui/gles2/tmp_vertex_shader.glsl</file>
+	
+    <file alias="gles2/led_fragment_shader.glsl">../../gui/gles2/led_fragment_shader.glsl</file>
+    <file alias="gles2/led_vertex_shader.glsl">../../gui/gles2/led_vertex_shader.glsl</file>
+
+    <file alias="gles2/grids_fragment_shader.glsl">../../gui/gles2/grids_fragment_shader.glsl</file>
+    <file alias="gles2/grids_vertex_shader.glsl">../../gui/gles2/grids_vertex_shader.glsl</file>
+    <file alias="gles2/grids_vertex_shader_fixed.glsl">../../gui/gles2/grids_vertex_shader_fixed.glsl</file>
+
 </qresource>
 </RCC>
