[BUILD][CMAKE] Add "USE_SANITIZER" and "USE_STACK_PROTECTOR" entries to buildvars_foo.dat[.tmpl] to detect wrong usage of variables / protect from stack overflow.

--- a/source/build-cmake/buildvars_mingw.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw.dat.tmpl
@@ -7,6 +7,12 @@ CCMAKE_CXX=g++
 
 BUILD_TYPE="Release"
 
+# "No" or "Yes"
+USE_SANITIZER="No"
+
+# "Default" or "String" or "All" or "No" or "Yes"
+USE_STACK_PROTECTION="Default"
+
 #MAKEFLAGS_BASE="-fvect-cost-model=dynamic -ftree-vectorize \
 #               -ftree-loop-distribute-patterns \
 #		-ftree-loop-optimize -ftree-loop-if-convert-stores \
