--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -22,12 +22,20 @@ USE_WHOLE_PROGRAM_OPTIMIZE="Yes"
 STRIP_SYMBOLS="Yes"
 # "No" or "Yes"
 USE_RADICAL_OPTIMIZE="No"
+# "No" or "Yes"
+COMPRESS_SYMBOLS="No"
 
 # "No" or "Yes"
 USE_COMMON_DEVICE_LIB="Yes"
 
 # "No" or "Yes"
 USE_OPENMP="No"
+
+# "No" or "Yes"
+USE_SANITIZER="No"
+
+# "Default" or "String" or "All" or "No" or "Yes"
+USE_STACK_PROTECTION="Default"
 
 ADDITIONAL_MAKEFLAGS_LINK_EXE=""
 ADDITIONAL_MAKEFLAGS_LINK_DLL=""
