--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -27,6 +27,12 @@ USE_WHOLE_PROGRAM_OPTIMIZE="No"
 # "No" or "Yes"
 USE_OPENMP="No"
 
+# "No" or "Yes"
+USE_SANITIZER="No"
+
+# "Default" or "String" or "All" or "No" or "Yes"
+USE_STACK_PROTECTION="Default"
+
 ADDITIONAL_MAKEFLAGS_LINK_EXE=""
 ADDITIONAL_MAKEFLAGS_LINK_DLL=""
 ADDITIONAL_MAKEFLAGS_LINK_LIB=""
