[General][I18N] Update Japanese translations.

--- a/source/src/qt/common/qrc/yis.qrc
+++ b/source/src/qt/common/qrc/yis.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/yis.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/yis.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/yis.qm</file>
 </qresource>
 </RCC>
