--- a/source/src/qt/common/qrc/babbage2nd.qrc
+++ b/source/src/qt/common/qrc/babbage2nd.qrc
@@ -24,5 +24,6 @@
     <file alias="button18.png">../../../res/babbage2nd/button18.png</file>
     <file alias="button19.png">../../../res/babbage2nd/button19.png</file>
     <file alias="button20.png">../../../res/babbage2nd/button20.png</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/babbage2nd.qm</file>
 </qresource>
 </RCC>
