--- a/source/src/qt/common/qrc/msx1.qrc
+++ b/source/src/qt/common/qrc/msx1.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/msx1.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/px7.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/msx.qm</file>
 </qresource>
 </RCC>
