--- a/source/src/qt/common/qrc/pc100.qrc
+++ b/source/src/qt/common/qrc/pc100.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file alias="default.ico">../../../res/pc100.ico</file>
     <file alias="bios_and_keys.txt">../../../../../doc/VMs/pc100.txt</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/pc100.qm</file>
 </qresource>
 </RCC>
