--- a/source/src/qt/common/qrc/ys6464a.qrc
+++ b/source/src/qt/common/qrc/ys6464a.qrc
@@ -23,5 +23,6 @@
     <file alias="button18.png">../../../res/ys6464a/button18.png</file>
     <file alias="button19.png">../../../res/ys6464a/button19.png</file>
     <file alias="button20.png">../../../res/ys6464a/button20.png</file>
+    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/ys6464a.qm</file>
 </qresource>
 </RCC>
