[BUILD] Separate threads definition for LTO.

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -23,6 +23,8 @@ USE_RADICAL_OPTIMIZE="Yes"
 USE_COMMON_DEVICE_LIB="Yes"
 # "No" or "Yes"
 USE_WHOLE_PROGRAM_OPTIMIZE="No"
+# Threads when using LTO.
+LTO_THREADS=6
 
 # "No" or "Yes"
 USE_OPENMP="No"
