--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -17,6 +17,8 @@ LOCAL_ARCH_TYPE="SSE2"
 USE_LTO="Yes"
 # "No" or "Yes"
 USE_WHOLE_PROGRAM_OPTIMIZE="Yes"
+# Threads when using LTO.
+LTO_THREADS=12
 
 # No" or "Yes"
 STRIP_SYMBOLS="Yes"
