--- a/source/src/qt/common/qrc/pc8801ma.qrc
+++ b/source/src/qt/common/qrc/pc8801ma.qrc
@@ -1,7 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file alias="default.ico">../../../res/pc8801ma.ico</file>
-    <file alias="bios_and_keys.txt">../../../../../doc/VMs/pc8801ma.txt</file>
+    <file alias="bios_and_keys.txt">../../../../../doc/VMs/pc8801.txt</file>
     <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/pc8801.qm</file>
 </qresource>
 </RCC>
