[Build][Linux] buildvars.dat: Add "USE_SHRINK_DEBUG_SYMBOL" flag to save disk space.

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -26,6 +26,10 @@ USE_WHOLE_PROGRAM_OPTIMIZE="No"
 # Threads when using LTO.
 LTO_THREADS=6
 
+# Shrinked debug symbols;
+# This may not be used both LTO.
+USE_SHRINK_DEBUG_SYMBOL="No"
+
 # "No" or "Yes"
 USE_OPENMP="No"
 
