--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -46,4 +46,6 @@ ADDITIONAL_MAKEFLAGS_LINK_LIB=""
 FFMPEG_DIR="/usr/local/i586-mingw-msvc/ffmpeg-3.4"
 MAKEFLAGS_GENERAL="-j3"
 MAKEFLAGS_BASE=""
+# Below sets make with affinity mask.Using excepts CPU CORE #1 and #7.
+#AFFINITY_MAKE="taskset 0xfbe make" 
 
