[BUILD] Separate definitions of archtecture flags.

--- a/source/build-cmake/buildvars.dat.tmpl
+++ b/source/build-cmake/buildvars.dat.tmpl
@@ -7,6 +7,11 @@ CC_SUFFIX=6
 #BUILD_TOOLCHAIN="LLVM"
 #CC_SUFFIX=4.0
 
+# "IA32" "AMD64" "ARM32" "ARM64"
+MAJOR_ARCH="AMD64"
+
+# "GENERIC" "SSE1" "SSE2" "SSE3" "AVX" or "NO"
+LOCAL_ARCH_TYPE="GENERIC"
 
 BUILD_TYPE="Relwithdebinfo"
 # "No" or "Yes".
