--- a/source/build-cmake/buildvars_mingw.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw.dat.tmpl
@@ -7,6 +7,14 @@ CCMAKE_CXX=g++
 
 BUILD_TYPE="Release"
 
+# "IA32" "AMD64" "ARM32" "ARM64"
+MAJOR_ARCH="IA32"
+
+# "SSE1" "SSE2" "SSE3" "AVX" or "NO"
+#LOCAL_ARCH_TYPE="AVX"
+LOCAL_ARCH_TYPE="SSE2"
+#LOCAL_ARCH_TYPE="No"
+
 # "No" or "Yes"
 USE_SANITIZER="No"
 
