--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -10,6 +10,9 @@ BUILD_TYPE="Release"
 # "No" or "Yes".
 CSP_DEBUG="NO"
 
+# "IA32" "AMD64" "ARM32" "ARM64"
+MAJOR_ARCH="IA32"
+
 # "SSE1" "SSE2" "SSE3" "AVX" or "NO"
 LOCAL_ARCH_TYPE="SSE2"
 
