--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -4,6 +4,12 @@
 #
 #CMAKE=/usr/bin/cmake
 BUILD_TOOLCHAIN="GCC"
+#BUILD_TOOLCHAIN="LLVM"
+#BUILD_TOOLCHAIN="CUSTOM"
+##
+#CUSTOM_BASE_PATH="/source code path/source/build-cmake/"
+## If you choose "CUSTOM" as BUILD_TOOLCHAIN, edit and uncomment below.
+#CUSTOM_TOOLCHAIN_PATH=""
 
 BUILD_TYPE="Release"
 
@@ -52,3 +58,5 @@ MAKEFLAGS_BASE=""
 # Below sets make with affinity mask.Using excepts CPU CORE #1 and #7.
 #AFFINITY_MAKE="taskset 0xfbe make" 
 
+# If using custom toolchain, modify and uncomment below.
+#TOOLCHAIN_PREFIX="/path/to/custom/root/"
