--- a/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
+++ b/source/build-cmake/buildvars_mingw_cross_win32.dat.tmpl
@@ -2,16 +2,21 @@
 ### BY GNU/Linux (and maybe other *nix like OSs) host to MinGW32 target.
 ### Please copy this to buildvars_mingw_cross_win32.dat and edit.
 #
+BUILD_TYPE="Release"
+
 #CMAKE=/usr/bin/cmake
 BUILD_TOOLCHAIN="GCC"
 #BUILD_TOOLCHAIN="LLVM"
 #BUILD_TOOLCHAIN="CUSTOM"
+CROSS_BUILD="Yes"
+
 ##
-#CUSTOM_BASE_PATH="/source code path/source/build-cmake/"
+
 ## If you choose "CUSTOM" as BUILD_TOOLCHAIN, edit and uncomment below.
 #CUSTOM_TOOLCHAIN_PATH=""
-
-BUILD_TYPE="Release"
+# If using custom toolchain, modify and uncomment below.
+#TOOLCHAIN_PREFIX="/path/to/custom/root/"
+#CUSTOM_BASE_PATH="/source code path/source/build-cmake/"
 
 # "No" or "Yes".
 CSP_DEBUG="NO"
@@ -58,5 +63,3 @@ MAKEFLAGS_BASE=""
 # Below sets make with affinity mask.Using excepts CPU CORE #1 and #7.
 #AFFINITY_MAKE="taskset 0xfbe make" 
 
-# If using custom toolchain, modify and uncomment below.
-#TOOLCHAIN_PREFIX="/path/to/custom/root/"
