--- a/source/src/qt/common/qrc/smc777.qrc
+++ b/source/src/qt/common/qrc/smc777.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file alias="default.ico">../../../res/smc777.ico</file>
-    <file alias="csp_qt_machine_ja.qm">../../../res/i18n/ja/smc777.qm</file>
+    <file alias="machine.ja_JP.qm">../../../res/i18n/ja/smc777.ja_JP.qm</file>
 </qresource>
 </RCC>
