[UI][Qt][I18N] Update translations.
[UI][Qt][SMB80TE] Add DISPLAY BASE ADRESS config.
[VM][BX1][MP85] Add unique namespace to VMs.

--- a/source/src/qt/common/qrc/commontexts.qrc
+++ b/source/src/qt/common/qrc/commontexts.qrc
@@ -6,6 +6,9 @@
     <file alias="readme_by_mr_tanam.txt">../../../../readme_by_mr_tanam.txt</file>
     <file alias="readme_by_umaiboux.txt">../../../../readme_by_mr_umaiboux.txt</file>
     <file alias="readme_by_artane.txt">../../../../readme_by_artane.txt</file>
+    <file alias="readme_by_mr_gorry.txt">../../../../readme_by_mr_gorry.txt</file>
+    <file alias="readme_by_mr_meister.txt">../../../../readme_by_mr_meister.txt</file>
+    
     <file alias="readme_fm7.txt">../../../../readme_fm7.txt</file>
     <file alias="readme_fm7.jp.txt">../../../../readme_fm7.jp.txt</file>
     <file alias="RELEASENOTE.txt">../../../../RELEASENOTE.txt</file>
